--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -22,24 +22,20 @@ workbook_name = test_data.xlsx
 login = login
 register = register
 
-
 [HEADERS]
-
 
 [URL]
 url = http://api.keyou.site:8000
 register_url = /user/register/
-
+login_url = /user/login/
 
 [METHOD]
 register_method = post
-
+login_method = post
 
 [PRESET]
-loan_params = {'mobile_phone': 15668619779, 'pwd': '334498sun'}
-admin_params = {'mobile_phone': 15625844603, 'pwd': '334498sun'}
-invest_params = {'mobile_phone': 15666304248, 'pwd': '334498sun'}
+unadmin_params = {'username': 'K5LpmO', 'email': '546104537@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
+admin_params = {'username': 'E5m3Fv', 'email': '575700453@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
 
 [SETUPDATA]
-
 
