--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -21,6 +21,7 @@ res_clounm = D
 workbook_name = test_data.xlsx
 login = login
 register = register
+projects = projects
 
 [HEADERS]
 
@@ -28,14 +29,16 @@ register = register
 url = http://api.keyou.site:8000
 register_url = /user/register/
 login_url = /user/login/
+projects_url = /projects/
 
 [METHOD]
 register_method = post
 login_method = post
+projects_method = post
 
 [PRESET]
-unadmin_params = {'username': 'K5LpmO', 'email': '546104537@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
-admin_params = {'username': 'E5m3Fv', 'email': '575700453@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
+unadmin_params = {'username': 'sJtcyh', 'email': '112969455@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
+admin_params = {'username': 'wiwzsR', 'email': '311092818@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
 
 [SETUPDATA]
 
