--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -19,26 +19,22 @@ charset = utf8
 id_clounm = A
 res_clounm = D
 workbook_name = test_data.xlsx
-login = login
-register = register
-projects = projects
-
-[HEADERS]
 
 [URL]
 url = http://api.keyou.site:8000
 register_url = /user/register/
 login_url = /user/login/
 projects_url = /projects/
+interfaces_url = /interfaces/
 
 [METHOD]
 register_method = post
 login_method = post
 projects_method = post
+interfaces_method = post
 
 [PRESET]
-unadmin_params = {'username': 'sJtcyh', 'email': '112969455@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
-admin_params = {'username': 'wiwzsR', 'email': '311092818@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
-
-[SETUPDATA]
+unadmin_params = {'username': 'GqdzTZ', 'email': '167743511@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
+admin_params = {'username': 'HqUNJf', 'email': '504670018@qq.com', 'password': '334498sun', 'password_confirm': '334498sun'}
+projects = {'id': 116, 'create_time': '2020-09-13T16:03:14.269829+08:00', 'name': 'lfqrR', 'leader': '孙忘', 'tester': '孙忘', 'programmer': '孙忘', 'publish_app': '自动化分析工具', 'desc': '时序自动化'}
 
